--- a/src/config/thaumcraft_world.cfg
+++ b/src/config/thaumcraft_world.cfg
@@ -6,7 +6,7 @@ general {
     B:allowChampionMobs=true
     B:allowSpawnAngryZombie=true
     B:allowSpawnElder=true
-    B:allowSpawnFireBat=true
+    B:allowSpawnFireBat=false
     B:allowSpawnPech=true
     B:allowSpawnTaintacle=true
     B:allowSpawnWisp=true
