Blacklisted Deep Mob Learning's matters in the uncrafter from Cyclic

--- a/src/config/cyclicmagic.cfg
+++ b/src/config/cyclicmagic.cfg
@@ -1505,6 +1505,9 @@ modpacks {
             mysticalagriculture:infusion_crystal
             mysticalagriculture:master_infusion_crystal
             techreborn:uumatter
+			deepmoblearning:living_matter_overworldian
+			deepmoblearning:living_matter_hellish
+			deepmoblearning:living_matter_extraterrestial
          >
 
         # If you change this to true, then the uncrafting will just take the first of many options in any recipe that takes multiple input types.  For example, false means chests cannot be uncrafted, but true means chests will ALWAYS give oak wooden planks. [default: true]
