Disabled End Stone in Cyclic's Uncrafter

--- a/src/config/cyclicmagic.cfg
+++ b/src/config/cyclicmagic.cfg
@@ -1469,6 +1469,7 @@ modpacks {
             techreborn:uumatter
             spectrite:spectrite_arrow
             spectrite:spectrite_arrow_special
+			minecraft:end_stone
          >
 
         # If a mod id is in this list, then nothing from that mod will be uncrafted  [default: [projecte], [flammpfeil.slashblade], [resourcefulcrops], [spectrite]]
