Completely disabled Cyclic's Uncrafter

--- a/src/config/cyclicmagic.cfg
+++ b/src/config/cyclicmagic.cfg
@@ -959,7 +959,7 @@ cyclicmagic {
         B:UnchantPylon=true
 
         # Set false to delete - requires restart [default: true]
-        B:UncraftingGrinder=true
+        B:UncraftingGrinder=false
 
         # Set false to delete - requires restart [default: true]
         B:VoidCharm=true
@@ -1509,6 +1509,9 @@ modpacks {
 			deepmoblearning:living_matter_overworldian
 			deepmoblearning:living_matter_hellish
 			deepmoblearning:living_matter_extraterrestial
+			thermalfoundation:material:1025
+			thermalfoundation:material:1024
+			aroma1997sdimension:portaligniter
          >
 
         # If you change this to true, then the uncrafting will just take the first of many options in any recipe that takes multiple input types.  For example, false means chests cannot be uncrafted, but true means chests will ALWAYS give oak wooden planks. [default: true]
