--- a/src/config/cyclicmagic.cfg
+++ b/src/config/cyclicmagic.cfg
@@ -1335,10 +1335,10 @@ modpacks {
     B:sword_ender_projectiles=false
 
     # Disable the projectile (splash potion / ender pearl) from this endgame sword [default: true]
-    B:sword_slowness_projectiles=true
+    B:sword_slowness_projectiles=false
 
     # Disable the projectile (splash potion / ender pearl) from this endgame sword [default: true]
-    B:sword_weakness_projectiles=true
+    B:sword_weakness_projectiles=false
 
     ##########################################################################################################
     # commands
@@ -1348,31 +1348,31 @@ modpacks {
 
     commands {
         # Opens your ender chest
-        B:enderchest=true
+        B:enderchest=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:enderchest.NeedsOP=true
 
         # Get where your current spawn is set (by a bed)
-        B:gethome=true
+        B:gethome=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:gethome.NeedsOP=false
 
         # Heal yourself (or a target player) to full
-        B:heal=true
+        B:heal=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:heal.NeedsOP=true
 
         # Teleport you to your current spawn (if its set)
-        B:home=true
+        B:home=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:home.NeedsOP=true
 
         # Read NBT data from your held item
-        B:nbtprint=true
+        B:nbtprint=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:nbtprint.NeedsOP=false
@@ -1390,7 +1390,7 @@ modpacks {
         B:searchitem.NeedsOP=false
 
         # Search the world nearby for spawners (dungeons, etc)
-        B:searchspawner=true
+        B:searchspawner=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:searchspawner.NeedsOP=true
@@ -1402,13 +1402,13 @@ modpacks {
         B:searchtrade.NeedsOP=false
 
         # Increase the maximum hearts of a target player (lasts until death)
-        B:sethearts=true
+        B:sethearts=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:sethearts.NeedsOP=true
 
         # Set reminders on screen for yourself
-        B:todo=true
+        B:todo=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:todo.NeedsOP=false
@@ -1420,7 +1420,7 @@ modpacks {
         B:villageinfo.NeedsOP=false
 
         # Teleport to true worldspawn
-        B:worldhome=true
+        B:worldhome=false
 
         # If true, only server OPs can run this command (or cheats enabled in single player)
         B:worldhome.NeedsOP=true
