--- a/src/config/brandon3055/DraconicEvolution.cfg
+++ b/src/config/brandon3055/DraconicEvolution.cfg
@@ -201,7 +201,7 @@ Tweaks {
     I:grinderEnergyPerHeart=80
 
     # When true everything is just a little harder. (Currently only effects recipes but that will probably change in the future)
-    B:hardMode=false
+    B:hardMode=true
 
     # A list of items of items that should be ignored by the item dislocator. Use the items registry name e.g. minecraft:apple you can also add a meta value like so minecraft:wool|4
     S:itemDislocatorBlacklist <
