Disabled Dynamic Surroundings' light level HUD

--- a/src/config/dsurround/dsurround.cfg
+++ b/src/config/dsurround/dsurround.cfg
@@ -184,7 +184,7 @@ features {
     B:"Allow Compass and Clock HUD"=true
 
     # Allow the Light Level HUD [default: true]
-    B:"Allow Light Level HUD"=true
+    B:"Allow Light Level HUD"=false
 }
 
 
